[package]
name = "slurp"
authors = ["Justin Ridgewell <justin@ridgewell.name>"]
description = "Like sponge, but without the moreutils kitchen sink"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jridgewell/rw"
version = "1.0.1"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }

[profile.release]
lto = true
panic = "abort"
